# l2-vpn-vs

./: CMakeLists.txt  README.md  build.sh  setup.sh  start.sh
.github/: FUNDING.yml
.github/workflows/: build.yml  release.yml
core/: CMakeLists.txt  debug.c  protocol.c  protocol.h  switch_core.c  switch_core.h
include/: os_net.h  os_tap.h  vp_debug.h  vp_types.h
os/: CMakeLists.txt
os/linux/: os_linux_common.h  os_net_linux.c  os_tap_linux.c
os/macos/: os_macos_common.h  os_net_macos.c  os_tap_macos.c  tap_backend_vmnet.c  tap_backend_vmnet.h  tap_emulator.c  tap_emulator.h
scripts/linux/: cleanup.sh  setup.sh
src/: CMakeLists.txt  switchd.c  vportd.c
